crates/tokio-otp/tests/ui/topology/generic_struct.stderr
error: Topology cannot be derived for generic structs
  --> tests/ui/topology/generic_struct.rs:17:23
   |
17 | struct GenericTopology<T> {
   |                       ^^^
